@@ -205,3 +205,13 @@
 - Build SUCCESS: `mvn compile -f controller/pom.xml`
 - Evidence saved: `.sisyphus/evidence/task-17-orchestrator-compile.txt`
 - Environment note: `lsp_diagnostics` unavailable for Java (`jdtls` not found in PATH), compile output used as diagnostics substitute
+
+## [2026-03-15] Task 18: TestFX UI tests
+- Created `MainWindowTest` (4 tests) and `SettingsPanelTest` (4 tests) in `com.desktoppet.ui`
+- Tests run headless via Monocle backend: `Tests run: 8, Failures: 0, Errors: 0`
+- Monocle dependency: `io.github.sebivenlo:openjfx-monocle:jdk-21.0.1` (NOT `org.testfx:openjfx-monocle:jdk-12.0.1+2` which is incompatible with JavaFX 21, and NOT `21.0.2` which is POM-only with no jar)
+- Required `--add-exports` in surefire argLine: `javafx.graphics/com.sun.javafx.util`, `javafx.graphics/com.sun.glass.ui.monocle`, `javafx.base/com.sun.javafx.logging` — all needed because external Monocle jar is in unnamed module
+- Also needed `--add-opens` for same packages
+- `directModeRadio` is NOT selected by default (no FXML `selected="true"` and `initialize()` doesn't select it) — must call `loadConfig()` first to set selection
+- `interact()` runs code on JavaFX Application Thread; `lookup("#id")` finds nodes by fx:id
+- Evidence: `.sisyphus/evidence/task-18-testfx.txt`
